k8s/ingress/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  
spec:
  rules:
    - http:
        paths: 
          - path: /api/(.*)
            pathType: Prefix
            backend: 
              service:
                name: mybackend-cluster-ip
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend: 
              service:
                name: myfrontend-cluster-ip
                port:
                  number: 3000
